--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@ main {
   padding: 0.4rem 0; 
   text-align: center;
   font-weight: 600;
+  color: #5a537b;
 }
 
 .convertion-wrapper p {
@@ -114,4 +115,5 @@ main {
   margin: 0;
   padding: 0.4rem 0;
   text-align: center;
+  color: #5a537b;
 }
